--- a/style.css
+++ b/style.css
@@ -14,36 +14,50 @@ header{
 }
 
 .rettangle-left{
-  width: 570px;
-  height: 99px;
+  display: inline-block;
+  float: left;
+  width: 50%;
+  height: 100%;
   position: absolute;
-  left: 570px;
-  top: 1px;
+  left: 0px;
+  top: 0px;
 }
 
 .logo{
   position: absolute;
   width: 217px;
   height: 62px;
-  left: -517px;
-  top: 19px;
+  left: 117px;
+  top: 20px;
 }
 
 .logo img{
   width: 100%;
+  height: 62px;
 }
 
 .rettangle-right{
-  width: 570px;
-  height: 100px;
   position: absolute;
-  top: 1px;
-  left: 570px;
+  width: 70%;
+  height: 100%;
+  float: right;
+  top: 0px;
+  right: 0px;
+  z-index: 1;
 }
 
+.rettangle-right img{
+  width: 100%;
+  height: 100px;
+} 
+
 ul{
+  position: absolute;
   list-style: none;
   display: flex;
+  z-index: 999;
+  top: 0px;
+  right: 40px;
 }
 
 li{
@@ -57,22 +71,48 @@ li{
   cursor: pointer;
 }
 
+.rettangle-right li img{
+  width: 100%;
+  height: 18px;
+}
+
 li:nth-child(4){
   margin-right: 101px;
 }
 
+li:nth-child(5){
+  margin-top: 6px;
+}
+
+li:nth-child(6){
+  margin-top: 6px;
+}
+
+li:nth-child(7){
+  margin-top: 6px;
+}
+
 h2{
   margin-top: 123px;
-  font-family: 'Playfair Display', serif;
+  font-family: 'Yeseva One', serif;
   font-weight: 400;
   font-style: normal;
   line-height: 52px;
   text-align: center;
+  font-size: 52px;
+  margin-bottom: 9px;
+}
+
+h6{
+  text-align: center;
+  margin: 0;
+  margin-bottom: 35px;
+  font-family: Helvetica, sans-serif;
+  font-size: 11px;
 }
 
 .panorama{
   width: 98%;
-  height: 600px;
   margin: 0 auto;
   position: relative;
   overflow: hidden;
@@ -81,19 +121,20 @@ h2{
 .panorama img{
   width: 100%;
   object-fit:contain;
+  display: block;
 }
 
 .yellow-circle{
   width: 196.37px;
   color: white;
   height: 196.37px;
-  background-color: rgb(255, 255, 0);
+  background-color: #F7A708;
   line-height: 60px;
   text-align: center;
   border-radius: 50%;
   position: absolute;
-  top: 500px;
-  left: 89%;
+  bottom: -80px;
+  right: -60px;
 }
 
 .yellow-circle p{
@@ -148,21 +189,47 @@ h2{
 .comments{
   display: inline-block;
   margin-left: 38px;
+  position: absolute;
+  top: 0;
+  position: relative;
+  min-width: 145px
 }
 
+
 .left-span{
+  margin-bottom: 5px;
   font-family: 'Montserrat', sans-serif;
   font-weight: bold;
+  font-size: 18px;
+  position: absolute;
+  top: -2px;
+  left: 25px;
+  margin: auto;
+  max-height: 24px;
 }
 
 .tag{
   display: inline-block;
   margin-left: 35px;
+  min-width: 134px;
+  position: absolute;
+  top: -2px;
+  position: relative;
 }
 
 .right-span{
   font-family: 'Montserrat', sans-serif;
   font-weight: bold;
+  margin: auto;
+  font-size: 18px;
+  position: absolute;
+  top: -2px;
+  left: 20px;
+}
+
+.ct-container{
+  width: 50%;
+  position: relative;
 }
 
 .line{
@@ -202,15 +269,16 @@ h2{
 }
 
 .date-left{
-  line-height: 50px;
+  display: inline-block;
   color: #534F4F;
   font-family: 'Montserrat', serif;
   font-size: 18px;
+  margin-bottom: 10px;
 }
 
 .date-down-left{
   float: left;
-  font-family: 'Playfair Display', serif;
+  font-family: 'Yeseva One', serif;
   font-size: 18px;
   font-weight: 400;
 }
@@ -218,22 +286,22 @@ h2{
 .date-right{
   float: right;
   margin-right: 24px;
-  line-height: 50px;
   color: #534F4F;
   font-family: 'Montserrat', serif;
   font-size: 18px;
+  margin-bottom: 10px;
 }
 
 .date-down-right{
   float: right;
   margin-right: 24px;
-  font-family: 'Playfair Display', serif;
+  font-family: 'Yeseva One', serif;
   font-size: 18px;
   font-weight: 400;
 }
 
 .section-left{
-  width: 400px;
+  width: 424px;
   height: 110px;
   margin-right: 0;
   float: left;
@@ -255,6 +323,7 @@ h2{
 .before-footer h3{
   font-style: normal;
   font-weight: bold;
+  font-size: 30px;
 }
 
 .before-footer .up .image{
@@ -276,12 +345,14 @@ h2{
 
 
 .before-footer .up p{
-  margin-top: 20px;
+  margin-top: 30px;
   width: 756px;
+  
 }  
 
 #reply{
   float: right;
+  margin-top: -30px;
 }
 
 .form{
@@ -299,19 +370,19 @@ h2{
 }
 
 .name{
-  width: 48%;
-  margin-right: 32px;
+  width: 49%;
+  margin-right: 0.5%;
   height: 52px;
 }
 
 .email{
-  width:48%;
+  width:49%;
   height: 52px;
 }
 
 .text{
   margin-top: 30px;
-  width: 100%;
+  width: 99.5%;
   height: 200px;
 }
 
@@ -363,11 +434,19 @@ footer{
   font-size: 18px;
 }
 
+footer a{
+  color: white;
+  text-decoration: none;
+}
+
 .btn-footer{
   padding: 15px 33px;
   background-color: #CAA069;
   border: none;
   border-radius: 5px;
+  cursor: pointer;
+  color: white;
+  font-weight: bold;
 }
 
 i:first-of-type{
@@ -387,4 +466,77 @@ i{
 .social{
   color: white;
   float: left;
+}
+
+.jumbotron{
+  width: 100%;
+  height: 486px;
+  color: white;
+  font-family: 'Montserrat',serif;
+  position: relative;
+  margin-bottom: 300px;
+}
+
+.jumbotron img{
+  width: 100%;
+}
+
+.jumbotron h4{
+  position: absolute;
+  top: 9px;
+  left: calc(31% - 50px);
+  font-size: 90px;
+}
+
+.jumbotron p{
+  position: absolute;
+  top: 90px;
+  left: calc(41% - 50px);
+  font-size: 90px;
+  font-family: 'Yellowtail', cursive;
+}
+
+.btn-container{
+width: 260px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.btn-yellow{
+  max-width: 70px;
+  background-color: #F7A708;
+  padding: 10px 15px;
+  border-radius: 24px;
+  border: 1px solid #E5E5E5;
+}
+
+.btn-yellow:nth-child(2){
+  background-color: #fff;
+  color: black;
+  border: 1px solid #E5E5E5;
+}
+
+.btn-yellow:nth-child(3){
+  background-color: #fff;
+  color: black;
+  border: 1px solid #E5E5E5;
+}
+
+.container-cards{
+  width: 98%;
+  min-height: 1001px;
+  display: flex;
+  margin-bottom: 100px;
+  z-index: 100;
+  flex-wrap: wrap;
+}
+
+.container-cards .card{
+  width: 30%;
+  height: 537px; 
+  margin-right: 30px;
+}
+
+.card img{
+  width: 100%;
 }
