--- a/style.css
+++ b/style.css
@@ -1,4 +1,8 @@
-
+body{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 
 header{
   width: 100%;
@@ -197,14 +201,15 @@ h6{
 
 
 .left-span{
+  min-width: 150px;
   margin-bottom: 5px;
+  margin-left: 12px;
   font-family: 'Montserrat', sans-serif;
   font-weight: bold;
   font-size: 18px;
   position: absolute;
   top: -2px;
   left: 25px;
-  margin: auto;
   max-height: 24px;
 }
 
@@ -219,8 +224,9 @@ h6{
 
 .right-span{
   font-family: 'Montserrat', sans-serif;
+  margin-left: 12px;
   font-weight: bold;
-  margin: auto;
+  min-width: 110px;
   font-size: 18px;
   position: absolute;
   top: -2px;
@@ -370,20 +376,23 @@ h6{
 }
 
 .name{
-  width: 49%;
-  margin-right: 0.5%;
+  width: 47.3%;
+  margin-right: 2%;
   height: 52px;
+  padding-left: 10px;
 }
 
 .email{
-  width:49%;
+  width:48%;
   height: 52px;
+  padding-left: 10px;
 }
 
 .text{
   margin-top: 30px;
   width: 99.5%;
   height: 200px;
+  padding-left: 10px;
 }
 
 .btn{
@@ -474,7 +483,6 @@ i{
   color: white;
   font-family: 'Montserrat',serif;
   position: relative;
-  margin-bottom: 300px;
 }
 
 .jumbotron img{
@@ -497,9 +505,12 @@ i{
 }
 
 .btn-container{
-width: 260px;
+  width: 260px;
   display: flex;
   justify-content: space-between;
+  margin-left: 24px;
+  margin-top: 24px;
+  margin-bottom: 71px;
 }
 
 .btn-yellow{
@@ -524,19 +535,72 @@ width: 260px;
 
 .container-cards{
   width: 98%;
-  min-height: 1001px;
+  margin: 100px auto;
   display: flex;
   margin-bottom: 100px;
-  z-index: 100;
   flex-wrap: wrap;
+  z-index: 100; 
 }
 
+
 .container-cards .card{
-  width: 30%;
-  height: 537px; 
-  margin-right: 30px;
+  width: 32%;
+  height: 599px;
+  position: relative;
+  margin-bottom: 50px;
+}
+
+.container-cards .card:nth-child(1){
+  margin-left: 1%;
+}
+
+.container-cards .card:nth-child(4){
+  margin-left: 1%;
+}
+
+.container-cards .card:nth-child(2){
+  margin-left: 1%;
+  margin-right: 1%;
+}
+
+.container-cards .card:nth-child(5){
+  margin-left: 1%;
+  margin-right: 1%;
 }
 
 .card img{
   width: 100%;
+}
+
+
+.container-cards .card span{
+  font-family: Helvetica, sans-serif;
+  font-size: 11px;
+  display: block;
+  margin: 16px 0 14px 0;
+}
+
+.container-cards .card p{
+  font-family: 'Yeseva One', sans-serif; 
+  font-size: 35px; 
+}
+
+.line-purple{
+  width: 40px;
+  border: 2px solid #E60B7F;
+}
+
+.right-label{
+  width: 120px;
+  font-size: 18px;
+  font-family: Montserrat;
+  border-top-left-radius: 20px;
+  padding-left: 10px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  background-color: #fff;
+  transform: rotate(-90deg);
+  position: absolute;
+  top: 44px;
+  right: -44px;
 }
